--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Andrei Fridrikhsen 200558923-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,8 @@
     <input type="text" id="todo-input" placeholder="Enter a new to-do item">
     <button id="add-button">Add</button>
     <ul id="todo-list"></ul>
-    <audio id="ding-sound" src="ding.mp3" preload="auto"></audio>
+    <audio id="ding-sound" src="audio/ding.mp3" preload="auto"></audio>
     <script src="script.js"></script>
+    <!--Sound Effect by <a href="https://pixabay.com/users/u_31vnwfmzt6-31480456/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=126626">Shagor Miah</a> from <a href="https://pixabay.com/sound-effects//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=126626">Pixabay</a>-->
 </body>
 </html>
